--- a/detoks/src/main/res/layout/fragment_admin.xml
+++ b/detoks/src/main/res/layout/fragment_admin.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:text="View tokens"
+        style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonTokenView"
@@ -15,8 +16,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="200dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:text="Create Token"
+        style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonTokenCreate"
