finalizing v1 API + changes on Benchmark fragment
Our community now has in it:
- function to send single transaction represented by list of tokens
- function to send multiple transactions, where each is a list of tokens
-listeners to receive proposal/send agreement and receive agreements

Modified Benchmarkfragment to use API functions

--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -32,7 +32,7 @@
 
     <fragment
         android:id="@+id/TransactionFrequencyTestFragment"
-        android:name="nl.tudelft.trustchain.detoks.TransactionFrequencyTestFragment"
+        android:name="nl.tudelft.trustchain.detoks.BenchmarkFragment"
         android:label="TransactionFrequencyTest">
 
         <action
