--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -27,33 +27,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="5"
             android:orientation="vertical"
+            android:gravity="center"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Peer 1"
-                android:textColor="#000000"
-                android:textSize="24sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Connected IP:"
-                android:id="@+id/peer_ip"
-                />
-            <!-- Text view to show Peer 1's IP-->
-            <TextView
-                android:id="@+id/peer1_ip_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Other connected peers:"
+                android:text="Selected receiver:"
                 />
             <!-- Text view to show Peer 1's IP-->
             <TextView
@@ -69,28 +51,85 @@
                 android:layout_gravity="center"
                 >
                 <Button
-                    android:id="@+id/send_token"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Send Token"
-                    android:onClick="createProposal"
-                    />
-                <Button
-                    android:id="@+id/peer1_button2"
+                    android:id="@+id/select_receiver_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Select Receiver"
                     android:onClick="selectPeer"
                     />
+                <Button
+                    android:id="@+id/clear_receivers_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Clear Receivers"
+                    android:onClick="selectPeer"
+                    />
             </LinearLayout>
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Last sent block:"></TextView>
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-                android:id="@+id/last_sent"></TextView>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/start_transactions_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Group Transactions" />
+
+                <Button
+                    android:id="@+id/single_transactions_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Single Transactions" />
+
+            </LinearLayout>
+
+            <!-- Text Fields -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/transactions_per_second_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0 ms"
+                    android:layout_marginEnd="10dp" />
+
+                <TextView
+                    android:id="@+id/single_text_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0 ms"
+                    android:layout_marginStart="10dp" />
+
+            </LinearLayout>
+
+            <!-- Bottom Buttons -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="50dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/switch_environment_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="example overlay"
+                    android:layout_marginEnd="20dp" />
+
+                <Button
+                    android:id="@+id/toTest_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="To Test"
+                    android:layout_marginStart="20dp" />
+
+            </LinearLayout>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -103,7 +142,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -116,7 +155,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/listview"
+                android:id="@+id/block_listview"
                 tools:listitem="@layout/list_item"
                 android:divider="#000000"
                 android:dividerHeight="1dp"/>
