--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -57,13 +57,6 @@
                     android:text="Select Receiver"
                     android:onClick="selectPeer"
                     />
-                <Button
-                    android:id="@+id/clear_receivers_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Clear Receivers"
-                    android:onClick="selectPeer"
-                    />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -130,11 +123,20 @@
                     android:layout_marginStart="20dp" />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Update list"
+                android:text="Update tokens"
                 android:id="@+id/update_list_button"></Button>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Generate tokens"
+                android:id="@+id/generate_tokens_button"></Button>
+            </LinearLayout>
         </LinearLayout>
 
         <!-- ListView -->
