replaced use of dummyTokenList with tokenstore to fix multiple sending bug

--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -113,14 +113,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="example overlay"
-                    android:layout_marginEnd="20dp" />
+                    android:layout_marginEnd="20dp"
+                    android:visibility="gone"/>
 
                 <Button
                     android:id="@+id/toTest_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To Test"
-                    android:layout_marginStart="20dp" />
+                    android:layout_marginStart="20dp"
+                    android:visibility="gone"/>
 
             </LinearLayout>
             <LinearLayout
