Removed all old dummy code for token generation, added 'Reset tokens' button

--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -131,8 +131,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Update tokens"
-                android:id="@+id/update_list_button"></Button>
+                android:text="reset tokens"
+                android:id="@+id/reset_tokens_button"></Button>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -151,7 +151,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Transaction List"
+                android:text="Token wallet:"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="15dp"
