--- a/detoks/src/main/res/layout/list_item.xml
+++ b/detoks/src/main/res/layout/list_item.xml
@@ -35,7 +35,7 @@
                 android:textSize="10sp"
                 android:id="@+id/item_field1"
                 android:layout_marginTop="5dp"
-                android:text="Type: PROP"/>
+                android:text=""/>
 
 
         </LinearLayout>
