Added basic torrent debug screen
Shows peer id and seeding status for first torrent in torrent manager list.

--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -11,11 +11,19 @@
         android:label="DeToks">
         <action android:id="@+id/action_toStrategyFragment"
             app:destination="@id/strategyFragment"/>
+        <action android:id="@+id/action_toTorrentFragment"
+            app:destination="@id/torrentFragment"/>
     </fragment>
 
     <fragment
         android:id="@+id/strategyFragment"
         android:name="nl.tudelft.trustchain.detoks.StrategyFragment"
         android:label="Strategy">
+    </fragment>
+
+    <fragment
+        android:id="@+id/torrentFragment"
+        android:name="nl.tudelft.trustchain.detoks.TorrentFragment"
+        android:label="Torrent">
     </fragment>
 </navigation>
