--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -139,6 +140,18 @@
                 android:text="Generate tokens"
                 android:id="@+id/generate_tokens_button"></Button>
             </LinearLayout>
+
+            <Button
+                android:id="@+id/single_token_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Single Token Transaction" />
+
+            <TextView
+                android:id="@+id/single_token_text"
+                android:layout_width="94dp"
+                android:layout_height="64dp"
+                android:text="0 ms" />
         </LinearLayout>
 
         <!-- ListView -->
