--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -148,21 +148,40 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Token wallet:"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="20"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Token wallet: "
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    />
+
+                <TextView
+                    android:id="@+id/token_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0 Tokens"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    />
+            </LinearLayout>
+
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:id="@+id/block_listview"
                 tools:listitem="@layout/list_item"
                 android:divider="#000000"
-                android:dividerHeight="1dp"/>
+                android:dividerHeight="1dp" />
         </LinearLayout>
 
     </LinearLayout>
