--- a/detoks/src/main/res/layout/fragment_detoks.xml
+++ b/detoks/src/main/res/layout/fragment_detoks.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-        android:id="@+id/networkSize"
+        android:id="@+id/networkLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
