--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_tabBarFragment_to_networkFragment"
             app:destination="@id/networkFragment" />
+        <action
+            android:id="@+id/action_tabBarFragment_to_discoveryFragment"
+            app:destination="@id/discoveryFragment" />
     </fragment>
     <fragment
         android:id="@+id/networkFragment"
@@ -21,6 +24,15 @@
         tools:layout="@layout/fragment_network" >
         <action
             android:id="@+id/action_networkFragment_to_tabBarFragment"
+            app:destination="@id/tabBarFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/discoveryFragment"
+        android:name="nl.tudelft.trustchain.detoks.fragments.DiscoveryFragment"
+        android:label="fragment_discovery"
+        tools:layout="@layout/fragment_discovery" >
+        <action
+            android:id="@+id/action_discoveryFragment_to_tabBarFragment"
             app:destination="@id/tabBarFragment" />
     </fragment>
 </navigation>
