added hopcount strategy

--- a/detoks/src/main/res/values/string_arrays.xml
+++ b/detoks/src/main/res/values/string_arrays.xml
@@ -8,5 +8,6 @@
         <item>Rising</item>
         <item>New</item>
         <item>Top</item>
+        <item>Hop Count</item>
     </string-array>
 </resources>
