--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -101,31 +101,6 @@
 
             </LinearLayout>
 
-            <!-- Bottom Buttons -->
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="50dp"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/switch_environment_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="example overlay"
-                    android:layout_marginEnd="20dp"
-                    android:visibility="gone"/>
-
-                <Button
-                    android:id="@+id/toTest_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="To Test"
-                    android:layout_marginStart="20dp"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -140,18 +115,23 @@
                 android:text="Generate tokens"
                 android:id="@+id/generate_tokens_button"></Button>
             </LinearLayout>
-
-            <Button
-                android:id="@+id/single_token_button"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Single Token Transaction" />
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+                <Button
+                    android:id="@+id/single_token_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Single Token Transaction" />
 
-            <TextView
-                android:id="@+id/single_token_text"
-                android:layout_width="94dp"
-                android:layout_height="64dp"
-                android:text="0 ms" />
+                <TextView
+                    android:id="@+id/single_token_text"
+                    android:layout_width="94dp"
+                    android:layout_height="64dp"
+                    android:text="0 ms" />
+            </LinearLayout>
         </LinearLayout>
 
         <!-- ListView -->
