Now 10000 instead of 10 10000

--- a/detoks-engine/src/main/res/layout/token_benchmark.xml
+++ b/detoks-engine/src/main/res/layout/token_benchmark.xml
@@ -89,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/gen_1000" android:layout_weight="1"/>
         <Button
-            android:text="Gen 10 10000"
+            android:text="Gen 10000"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/gen_10000" android:layout_weight="1"/>
         <Button
