made it so that clicking on a video name also brings one to the debug screen

--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -11,6 +11,8 @@
         android:label="DeToks">
         <action android:id="@+id/action_toStrategyFragment"
             app:destination="@id/strategyFragment"/>
+        <action android:id="@+id/action_toTorrentFragment"
+            app:destination="@id/torrentFragment"/>
     </fragment>
 
     <fragment
