Added discovery page

--- a/detoks/src/main/res/layout/fragment_discovery.xml
+++ b/detoks/src/main/res/layout/fragment_discovery.xml
@@ -50,4 +50,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ListView
+        android:id="@+id/discoveryList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="1dp"/>
+
 </LinearLayout>
